--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "core-js": "^2.5.4",
+    "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
