inicio do desenvolvimento da pagina de cadastro de lancamento

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "core-js": "^2.5.4",
+    "ng2-currency-mask": "^9.0.2",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "~6.5.3",
@@ -47,5 +48,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.5.3"
-  }
+  },
+  "styles": [
+    "node_modules/primeicons/primeicons.css",
+    "node_modules/primeng/resources/themes/nova-light/theme.css",
+    "node_modules/primeng/resources/primeng.min.css"
+  ]
 }
