--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "core-js": "^2.5.4",
+    "moment": "^2.25.3",
     "ng2-currency-mask": "^9.0.2",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
