--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@auth0/angular-jwt": "^4.1.2",
     "core-js": "^2.5.4",
     "moment": "^2.25.3",
     "ng2-currency-mask": "^9.0.2",
