--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.13",
     "@auth0/angular-jwt": "^4.1.2",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
     "moment": "^2.25.3",
     "ng2-currency-mask": "^9.0.2",
     "primeicons": "^2.0.0",
