--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^4.1.2",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "force-ssl-heroku": "^1.0.2",
     "moment": "^2.25.3",
     "ng2-currency-mask": "^9.0.2",
     "primeicons": "^2.0.0",
