--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@auth0/angular-jwt": "^4.1.2",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "force-ssl-heroku": "^1.0.2",
